# Orderbook

./: .gitignore  1  BENCHMARKS.md  Cargo.toml  README.md  build.rs  docker-compose.yml
MarketDataBroadcaster/: MarketDataBroadcaster.csproj  MarketDataBroadcaster.http  MarketDataBroadcaster.sln  Program.cs  WeatherForecast.cs
MarketDataBroadcaster/Hubs/: MarketHub.cs
MarketDataBroadcaster/Properties/: launchSettings.json
MarketDataBroadcaster/Services/: IndividualEventConsumer.cs  KafkaMarketDataConsumer.cs  PublicEventConsumer.cs
MarketSimulator/: MarketSimulator.csproj  MarketSimulator.sln  Program.cs  appsettings.json  appsettings.local.json
MarketSimulator/Models/: BinanceModels.cs  MarketSimulatorSettings.cs
MarketSimulator/Pacing/: OrderRatePacer.cs  TimestampRatePacer.cs
MarketSimulator/Services/: BinanceDataParser.cs
OMS/: Dockerfile  OMS.http  Program.cs  TradingPlatform.sln  WeatherForecast.cs
OMS/Controllers/: HealthController.cs  OrdersController.cs
OMS/Trading.Oms.Domain/: Class1.cs
OMS/Trading.Oms.Infrastructure/: Class1.cs  Trading.Oms.Infrastructure.csproj
OrderMatchingEngine/: Cargo.toml  build.rs
OrderMatchingEngine/src/: config.rs  main.rs  models.rs
OrderMatchingEngine/src/infrastructure/: grpc_gateway.rs  mod.rs  redpanda.rs  redpanda_gateway.rs
OrderMatchingEngine/src/mappers/: engineCommands.rs  events.rs  mod.rs  orders.rs
OrderMatchingEngine/src/models/: engine_payload.rs  events.rs  order.rs  order_book.rs
OrderMatchingEngine/src/services/: dispatcher_service.rs  matching_engine_service.rs  mod.rs
OrderMatchingEngine/src/system/: thread.rs
Protos/: orderbook.proto
Schemas/: protocol.yaml
Sequencer/: Cargo.toml
Trading.Oms.Api/: OMS.http  TradingPlatform.sln
Trading.Oms.Api/Controllers/: HealthController.cs  OrdersController.cs
proto/: orderbook.proto
src/: main.rs  models.rs
(+95 files in other folders)
