[package]
name = "OrderMatching"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[dependencies]
tonic = "0.12"           # gRPC Server framework
prost = "0.13"           # handle Protobuf data
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # Async Runtime (enable Rust handle Request concurrently)
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
oneshot = "0.1.13"          # Async tool
flume = "0.12.0"

[build-dependencies]     # Complie tool
tonic-build = "0.12"     # transform .proto file to Rust Code
