[package]
name = "OrderMatching"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. Tokio
tokio = { version = "1", features = ["full"] }

# 2. gRPC Stack - Using current stable versions
tonic = "0.12"
prost = "0.13"

# 3. Streaming & Utilities
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"

# 4. Redpanda/Kafka
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
oneshot = "0.2.1"

# 5. Others

bincode = "1.3.3"

[build-dependencies]

tonic-build = "0.12"
